--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,5 +15,15 @@
         continue.</strong>
 </noscript>
 <div id="app"></div>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVPY4197MJ"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-LVPY4197MJ');
+</script>
+
 </body>
 </html>
