--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,6 +8,7 @@
     <title>shieldwall - secure your most private servers</title>
 
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
+    <script async defer data-domain="shieldwall.me" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <body>
 <noscript>
@@ -15,15 +16,6 @@
         continue.</strong>
 </noscript>
 <div id="app"></div>
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVPY4197MJ"></script>
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'G-LVPY4197MJ');
-</script>
 
 </body>
 </html>
