misc: small fix or general refactoring i did not bother commenting

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,20 +7,20 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
 
     <title>shieldwall - secure your most private servers</title>
-    <meta name="description" content="shieldwall is a free service to hide and protect your servers on the public internet.">
+    <meta name="description" content="shieldwall is a free service to hide and protect your servers on the internet.">
 
     <meta name="robots" content="index, follow">
 
     <meta property="og:type" content="article" />
     <meta property="og:title" content="shieldwall - secure your most private servers" />
-    <meta property="og:description" content="shieldwall is a free service to hide and protect your servers on the public internet." />
-    <meta property="og:image" content="https://shieldwall.me/logo.png" />
+    <meta property="og:description" content="shieldwall is a free service to hide and protect your servers on the internet." />
+    <meta property="og:image" content="https://shieldwall.me/ogimage.png" />
     <meta property="og:url" content="https://shieldwall.me/" />
     <meta property="og:site_name" content="shieldwall" />
 
     <meta name="twitter:title" content="shieldwall - secure your most private servers" />
-    <meta name="twitter:description" content="shieldwall is a free service to hide and protect your servers on the public internet." />
-    <meta name="twitter:image" content="https://shieldwall.me/logo.png" />
+    <meta name="twitter:description" content="shieldwall is a free service to hide and protect your servers on the internet." />
+    <meta name="twitter:image" content="https://shieldwall.me/ogimage.png" />
     <meta name="twitter:creator" content="@evilsocket">
     
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer></script>
