2 steps verification via email

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,13 +28,12 @@
 
     <style>
         .footer {
-            position: absolute;
-            bottom: 0;
             width: 100%;
             height: 30px;
             font-size: 0.9rem;
             color: #bbb;
             padding: 5px;
+            margin-top: 50px;
         }
 
         .footer > a {
