--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,15 +29,17 @@
     <style>
         .footer {
             width: 100%;
-            height: 30px;
             font-size: 0.9rem;
-            color: #bbb;
+            color: #ccc;
             padding: 5px;
-            margin-top: 50px;
         }
 
         .footer > a {
             color: #bbb;
+        }
+
+        #app {
+            min-height: 95vh;
         }
     </style>
 </head>
