--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
+    <link rel="apple-touch-icon" href="https://shieldwall.me/logo150.png">
 
     <title>shieldwall - secure your most private servers</title>
     <meta name="description" content="shieldwall is a free service to hide and protect your servers on the internet.">
